# rag_app

./: .gitignore  README.md  pyproject.toml  requirements.txt  talk_to_web_rag.py
rag_app/: talk_to_web_rag.py
